      'Accept/Approve' for better agreement with the button labels.

    - Added '(by thread)' to the previous and next message links in the
      archive to emphasize that even if you got to the message from a
      subject, date or author index, previous and next are still by thread.

2.1.19 (xx-xxx-xxxx)

  New Features

    - There is a new list attribute equivalent_domains and a
      DEFAULT_EQUIVALENT_DOMAINS setting to set the default for new lists which
      in turn defaults to the empty string.  This provides a way to specify one
      or more groups of domains, e.g., mac.com, me.com, icloud.com, which are
      considered equivalent for validating list membership for posting and
      moderation purposes.

    - There is a new WEB_HEAD_ADD setting to specify text to be added to the
      <HEAD> section of Mailman's internally generated web pages.  This doesn't
      apply to pages built from templates, but in those cases, custom templates
      can be created.  (LP: #1409396)

    - There is a new DEFAULT_SUBSCRIBE_OR_INVITE setting.  Set this to Yes
      to make the default selection on the admin Mass Subscriptions page
      Invite rather than Subscribe.  (LP: #1404511)

    - There is a new list attribute in the Bounce processing section.
      bounce_notify_owner_on_bounce_increment if set to Yes will cause
      Mailman to notify the list owner on every bounce that increments a
      list member's score but doesn't result in a probe or disable.  There
      is a new configuration setting setting
      DEFAULT_BOUNCE_NOTIFY_OWNER_ON_BOUNCE_INCREMENT to set the default
      for new lists.  This in turn defaults to No.  (LP: #1382150)

  Changed behavior

    - Mailman's log files, request.pck files and heldmsg-* files are no
      longer created world readable to protect against access by untrusted
      local users.  Note that permissions on existing log files won't be
      changed so if you are concerned about this and don't rotate logs or